Atualizada configuração CORS para permitir padrões dinâmicos usando `setAllowedOriginPatterns`.